# axum-start

./: .env  .env.ci  .env.docker.local  .env.example  Cargo.toml  Dockerfile  GRAPHQL.md  README.md
.sqlx/: query-0a8b75440ce6471d75aff4b69fac509750c7752326e78dc3c4d2054c01f527b4.json  query-0c31e17abbff7e30328e42429b5916c197c4cad357b1ea80bba32288e85fb441.json  query-0f6d56f210b19e12d50a944ecbf380a33ea968cb9f39bc19d2531e7a927bcd20.json  query-0f75bfd682488d1e745efb27af1af4f374221fd393130ce4ce159659416820bc.json  query-147c1bbba17b68dd8e8d45ebb677f4e22855ecd90d8015b94ea694af3a6cd61c.json  query-1eb1069f07221e34f1ca16dbaea10903f3f6ce9b74f2ba93f83ebcb2bdd17e1b.json  query-1ff3c5342bfce49def8d5669c7f1159f45d09b286d7fd7a7564128c22a4aa18d.json  query-20e6835fef95fd493a406d06159c9c583171910725ca1e7673499a4f57151cac.json  query-2acc2c42647f948f93f27f63d75d4b08bd67e69e8eadff822fe3563b880364a0.json  query-367cf001496fd187cfc8a1a951133d62d1716adb39e9eece4ef937dfd5c2a385.json  query-383debf072f1a0591534efaa040365f000ac97a5599613b8b64d9aa0b1f4093a.json  query-3887f607f4b2bb12924de5bf949ceddb5da6432217f523ddd3d33b51c517bd02.json  query-396108c1aba954a46ef1412a62c6b343e4810a1214fc4b1dc3923a4a09789e71.json  query-4dac26a26b3c0561026b178687cb701be819d8b8922b9fbc59cb21aca3c4e4c1.json  query-54589c16443240db1af974af7e51f5e065edc93bc22a1e3826b805db7d0e0fb4.json  query-639069917dd2f59796ecabc6096971641a4e8bedaf16fbf73164cd76220f7b33.json  query-672c2592803b0c68ba16b7bef9ca3f83f3f569ebd52957eff0e27700fffba733.json  query-677e970856c92c01594f75d97b60d74781acc379462d3c747eb2158b33e594be.json  (+26 more)
(+24 files in other folders)
