[package]
name = "axum-start"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "6.0.7"
async-graphql-axum = "6.0.7"
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["full"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-native-tls", "postgres"] }
sqlx-core ={ version = "0.7.1", default-features=false, features = ["uuid", "bigdecimal", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.28"
uuid = { version = "1.4.1", features = ["v4"]}
thiserror = "1.0.49"
tokio-stream = "0.1.14"
futures-util = "0.3.28"
