[package]
name = "axum-start"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "6.0.7", features = ["chrono"]}
async-graphql-axum = "6.0.7"
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["full"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-native-tls", "postgres", "time", "chrono"] }
thiserror = "1.0.49"
tokio-stream = "0.1.14"
futures-util = "0.3.28"
chrono = "0.4.31"
tower = "0.4.13"
tower-http = {version ="0.4.4", features = ["full", "trace"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
